<resources>
    <string name="app_name">InClass11</string>
    <string name="Name">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign UP</string>
    <string name="login">LogIn</string>
    <string name="first_name">First Name</string>
    <string name="cancel">Cancel</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="choose_password">Choose Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="message_hint">Type message to send</string>
</resources>
